aaservices/helm/aaservices/scripts/loadbalancer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /aaservices/$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /aaservices(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aas
                port:
                  number: 8079
